apply 64-bit patch and regenerate WorkspaceSetup